--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
                 app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 android:id="@+id/toolbar"
                 app:title="Home"
+                app:titleTextAppearance="@font/space_grotesk_regular"
                 app:titleTextColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize" />
