--- a/app/src/main/res/layout/donations_row_layout.xml
+++ b/app/src/main/res/layout/donations_row_layout.xml
@@ -3,23 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:elevation="10dp"
+    android:layout_height="150dp"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     android:layout_marginTop="8dp"
-    app:cardCornerRadius="20dp"
+    android:layout_marginEnd="16dp"
+    android:elevation="10dp"
+    app:cardCornerRadius="8dp"
     app:strokeColor="@color/orange"
-    app:strokeWidth="1dp"
-    android:layout_height="150dp">
+    app:strokeWidth="1dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/receiveTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="@font/space_grotesk_regular"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,7 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="@string/donated_food_item"
+            android:fontFamily="@font/space_grotesk_regular"
+            android:text="Donation"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,12 +46,14 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua"
+            android:fontFamily="@font/space_grotesk_regular"
+            android:text="Description"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/donatedFoodItem" />
+            app:layout_constraintTop_toBottomOf="@+id/donatedFoodItem"
+            tools:ignore="HardcodedText" />
 
         <ImageView
             android:id="@+id/donorPhoneNumber"
@@ -56,7 +62,8 @@
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_phone"
             app:layout_constraintEnd_toStartOf="@+id/donorLocation"
-            app:layout_constraintTop_toTopOf="@+id/donorLocation" />
+            app:layout_constraintTop_toTopOf="@+id/donorLocation"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/donorLocation"
@@ -66,6 +73,7 @@
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_location"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="ContentDescription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
