--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    >
+    android:background="@color/white">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,94 +14,102 @@
         tools:ignore="ScrollViewSize">
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_fooddonation"
+            android:src="@drawable/logo_transparent"
             tools:ignore="ContentDescription" />
-
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="About us"
             android:layout_gravity="center"
+            android:fontFamily="@font/space_grotesk_bold"
+            android:text="About Us"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="HardcodedText" />
 
-         <androidx.cardview.widget.CardView
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             app:cardElevation="0dp"
-             android:layout_marginStart="20dp"
-             android:layout_marginEnd="20dp">
-             <androidx.constraintlayout.widget.ConstraintLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
 
-                 <TextView
-                     android:id="@+id/textView5"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginStart="8dp"
-                     android:layout_marginTop="8dp"
-                     android:layout_marginEnd="8dp"
-                     android:text="Foodonor community is aimed at providing a platform where compassionate citizens in our country to begin and manage initaitives that solve hunger and food wastage in the country."
-                     android:textColor="@color/black"
-                     android:textSize="15sp"
-                     app:layout_constraintEnd_toEndOf="parent"
-                     app:layout_constraintStart_toStartOf="parent"
-                     app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                 <TextView
-                     android:id="@+id/textView16"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="8dp"
-                     android:text="Mission"
-                     android:textColor="@color/black"
-                     android:textSize="20sp"
-                     android:textStyle="bold"
-                     app:layout_constraintEnd_toEndOf="parent"
-                     app:layout_constraintStart_toStartOf="parent"
-                     app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:fontFamily="@font/space_grotesk_regular"
+                    android:text="The NourNet community aims to provide a platform where compassionate citizens can initiate and manage efforts to combat hunger and reduce food waste in our country."
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="HardcodedText" />
 
-                 <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginTop="8dp"
-                     android:layout_marginBottom="24dp"
-                     android:text="Our mission is to make Kenya a hunger free country."
-                     android:textColor="@color/black"
-                     android:textSize="15sp"
-                     app:layout_constraintBottom_toBottomOf="parent"
-                     app:layout_constraintEnd_toEndOf="parent"
-                     app:layout_constraintStart_toStartOf="parent"
-                     app:layout_constraintTop_toBottomOf="@+id/textView16" />
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/space_grotesk_bold"
+                    android:text="Mission"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5"
+                    tools:ignore="HardcodedText" />
 
-             </androidx.constraintlayout.widget.ConstraintLayout>
-         </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="24dp"
+                    android:fontFamily="@font/space_grotesk_regular"
+                    android:text="NourNet exists to turn surplus food into shared hope. Our goal is to create a space where everyday people can start and sustain efforts to feed the needy and minimize food waste in their communities."
+                    android:textColor="@color/black"
+                    android:textSize="15sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView16"
+                    tools:ignore="HardcodedText" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/space_grotesk_regular"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="160dp"
             android:layout_gravity="center"
-            android:text="Follow us on "/>
+            android:text="Follow us on "
+            tools:ignore="HardcodedText" />
 
         <View
-            android:layout_width="70dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="4dp"
+            android:layout_width="80dp"
+            android:layout_height="2dp"
             android:layout_gravity="center"
-            android:background="#D3D3D3"/>
-
+            android:layout_marginTop="5dp"
+            android:background="#D3D3D3" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -113,37 +121,21 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_margin="8dp"
-                android:src="@drawable/ic_instagram"/>
+                android:src="@drawable/ic_instagram"
+                tools:ignore="ContentDescription" />
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_margin="8dp"
-                android:src="@drawable/ic_facebook"/>
+                android:src="@drawable/ic_facebook"
+                tools:ignore="ContentDescription" />
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_margin="8dp"
-                android:src="@drawable/ic_twitter"/>
+                android:src="@drawable/ic_twitter"
+                tools:ignore="ContentDescription" />
         </LinearLayout>
 
-        <View
-            android:layout_width="70dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="4dp"
-            android:layout_gravity="center"
-            android:background="#D3D3D3"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:text="Version 1.0.0"
-            android:textSize="14sp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="© 2022 All rights reserved"/>
     </LinearLayout>
 </ScrollView >
