--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -15,14 +15,15 @@
         android:gravity="center"
         android:layout_marginTop="-50dp"
         android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:id="@+id/profile"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:padding="15dp"
-            android:src="@drawable/ic_customer_service_svgrepo_com"
+            android:src="@drawable/ic_customer_service"
             tools:ignore="ContentDescription" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -39,16 +40,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/space_grotesk_regular"
                 android:textSize="20sp"
                 android:inputType="text"
-                android:hint="Name"
+                android:hint="Username"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:backgroundTint="@android:color/transparent"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:importantForAutofill="no"
-                tools:ignore="UnusedAttribute" />
+                tools:ignore="HardcodedText,UnusedAttribute" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -67,7 +69,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
+                android:fontFamily="@font/space_grotesk_regular"
                 android:hint="@string/email_address"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
@@ -80,7 +83,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/decription_error"
+            android:id="@+id/description_error"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -97,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
+                android:fontFamily="@font/space_grotesk_regular"
                 android:inputType="textMultiLine"
                 android:maxLines="10"
                 android:textColor="@color/black"
@@ -113,11 +117,12 @@
             android:layout_height="60dp"
             android:layout_margin="20dp"
             android:backgroundTint="@color/orange"
+            android:fontFamily="@font/space_grotesk_regular"
             android:text="@string/submit"
-            app:cornerRadius="20dp"
+            android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textAllCaps="false"
             android:textSize="20sp"
+            app:cornerRadius="8dp"
             tools:ignore="UnusedAttribute" />
 
     </LinearLayout>
