--- a/app/src/main/res/layout/fragment_donations.xml
+++ b/app/src/main/res/layout/fragment_donations.xml
@@ -13,9 +13,11 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/donations_row_layout"/>
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/donations_row_layout" />
 
     <ProgressBar
         android:id="@+id/progress_circular"
