--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/space_grotesk_regular"
         android:text="@string/login"
         android:textColor="@color/black"
         android:textSize="22sp"
@@ -22,15 +23,15 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_fooddonation"
+        android:src="@drawable/logo_transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="ContentDescription" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailTinputLayout"
+        android:id="@+id/emailInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,7 +42,6 @@
         app:hintTextColor="@color/black"
         app:boxStrokeColor="@color/orange"
         app:endIconMode="clear_text"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
@@ -49,6 +49,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailEditText"
+            android:fontFamily="@font/space_grotesk_regular"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"/>
@@ -68,13 +69,14 @@
         app:boxStrokeColor="@color/orange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailTinputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
         app:startIconDrawable="@drawable/ic_lock">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fontFamily="@font/space_grotesk_regular"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -84,6 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/space_grotesk_regular"
         android:textColor="@color/black"
         android:text="@string/forgot_password"
         app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
@@ -98,9 +101,10 @@
         android:layout_marginEnd="32dp"
         android:backgroundTint="@color/orange"
         android:padding="16dp"
+        android:fontFamily="@font/space_grotesk_regular"
         android:text="@string/login"
-        android:textAllCaps="false"
-        app:cornerRadius="20dp"
+        android:textAllCaps="true"
+        app:cornerRadius="8dp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +115,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="@string/dont_have_an_account"
+        android:fontFamily="@font/space_grotesk_regular"
+        android:text="Don't have an account?"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/btnLogin"
@@ -122,6 +127,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/space_grotesk_regular"
         android:text="@string/register"
         android:textColor="@color/orange"
         android:textSize="16sp"
@@ -140,6 +146,5 @@
         app:layout_constraintStart_toStartOf="parent"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
