--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/space_grotesk_regular"
         android:text="@string/forgot_password"
         android:textColor="?android:attr/textColorPrimary" />
 
@@ -32,6 +33,7 @@
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fontFamily="@font/space_grotesk_regular"
             android:inputType="textEmailAddress" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -46,9 +48,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:padding="16dp"
+        android:fontFamily="@font/space_grotesk_regular"
         android:text="@string/reset"
-        android:textAllCaps="false"
-        app:cornerRadius="20dp" />
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        app:cornerRadius="8dp" />
 
     <ProgressBar
         android:id="@+id/progressBar6"
