--- a/app/src/main/res/layout/receive_row_layout.xml
+++ b/app/src/main/res/layout/receive_row_layout.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/space_grotesk_regular"
             android:text="@string/donated_food_item"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -42,7 +43,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua"
+            android:fontFamily="@font/space_grotesk_regular"
+            android:text="Donation Description"
             android:textColor="@color/black"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +58,8 @@
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_phone"
             app:layout_constraintEnd_toStartOf="@+id/donorLocation"
-            app:layout_constraintTop_toTopOf="@+id/donorLocation" />
+            app:layout_constraintTop_toTopOf="@+id/donorLocation"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/donorLocation"
@@ -66,6 +69,7 @@
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_location"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="ContentDescription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
